get articles implemented

--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -9,5 +9,6 @@ services:
     ports:
       - 5432:5432
     environment:
-      - "POSTGRES_PASSWORD=devpass"
-      - "POSTGRES_USER=blog_user"
+      POSTGRES_PASSWORD: devpass
+      POSTGRES_USER: blog_user
+      POSTGRES_DB: blogsite
